<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fts.vnairline.PalletActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layout_left"
                    android:layout_width="500px"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal"
                        android:padding="3dp">

                        <TextView
                            style="@style/styletextemloyeeinfo"
                            android:layout_gravity="center"
                            android:text="@string/uldid" />

                        <EditText
                            android:id="@+id/edit_ulid_1"
                            style="@style/styleedittextinvestorinfo"
                            android:layout_width="200dp"
                            android:layout_marginLeft="5dp" />

                        <EditText
                            android:id="@+id/edit_ulid_2"
                            style="@style/styleedittextinvestorinfo"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal"
                        android:padding="3dp">

                        <TextView

                            style="@style/styletextemloyeeinfo"
                            android:layout_gravity="center"
                            android:text="@string/unloading" />

                        <EditText
                            android:id="@+id/edit_unloading"
                            style="@style/styleedittextinvestorinfo"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal"
                        android:padding="3dp">

                        <TextView
                            style="@style/styletextemloyeeinfo"
                            android:layout_gravity="center"
                            android:text="@string/awbid" />

                        <EditText
                            android:id="@+id/edit_awbid"
                            style="@style/styleedittextinvestorinfo"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal"
                        android:padding="3dp">

                        <TextView
                            style="@style/styletextemloyeeinfo"
                            android:layout_gravity="center"
                            android:text="@string/pieces" />

                        <EditText
                            android:id="@+id/edit_pieces"
                            style="@style/styleedittextinvestorinfo"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal"
                        android:padding="3dp">

                        <TextView
                            style="@style/styletextemloyeeinfo"
                            android:layout_gravity="center"
                            android:text="@string/weight" />

                        <EditText
                            android:id="@+id/edit_weight"
                            style="@style/styleedittextinvestorinfo"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal"
                        android:padding="3dp">

                        <TextView
                            style="@style/styletextemloyeeinfo"
                            android:layout_gravity="center"
                            android:text="@string/shc" />

                        <EditText
                            android:id="@+id/edit_shc"
                            style="@style/styleedittextinvestorinfo"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal"
                        android:padding="3dp">

                        <TextView
                            style="@style/styletextemloyeeinfo"
                            android:layout_gravity="center"
                            android:text="@string/nature" />

                        <EditText
                            android:id="@+id/edit_nature"
                            style="@style/styleedittextinvestorinfo"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal"
                        android:padding="3dp">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/news" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/save" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/delete" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/colordarkblue" />

                <LinearLayout
                    android:id="@+id/layout_right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal"
                        android:padding="3dp">

                        <TextView
                            style="@style/styletextemloyeeinfo"
                            android:layout_gravity="center"
                            android:text="@string/filght_no" />

                        <TextView
                            style="@style/styletextemloyeeinfo"
                            android:layout_gravity="center"
                            android:text="vn1000" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal"
                        android:padding="3dp">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/scanqr" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/takephoto" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="225dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/chevron_left" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/chevron_right" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/colordarkblue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/colordarkblue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/styletextemloyeeinfo"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/contour" />

                <EditText
                    android:id="@+id/edit_contour"
                    style="@style/styleedittextinvestorinfo"
                    android:layout_width="80dp" />

                <TextView
                    style="@style/styletextemloyeeinfo"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/w_vertical" />

                <EditText
                    android:id="@+id/edit_w_vertical"
                    style="@style/styleedittextinvestorinfo"
                    android:layout_width="80dp" />

                <TextView
                    style="@style/styletextemloyeeinfo"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/w_horizontal" />

                <EditText
                    android:id="@+id/edit_w_horizontal"
                    style="@style/styleedittextinvestorinfo"
                    android:layout_width="80dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/styletextemloyeeinfo"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/w_horizontal" />

                <EditText
                    android:id="@+id/edit_materail"
                    style="@style/styleedittextinvestorinfo"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="3dp">

                <Button
                    android:id="@+id/bt_finish_build_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finish_buil_up" />

                <Button
                    android:id="@+id/bt_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/bt_exits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exits" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>