<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fts.vnairline.LoginActivity">
    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/logo" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_width="350dp"
            android:layout_height="match_parent">
            <EditText
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/ed_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colordarkblue"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textColor="@color/colordarkblue"
                android:textColorHint="@color/colordarkblue"
                android:textSize="@dimen/text_size_title" />

            <EditText
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/ed_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colordarkblue"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colordarkblue"
                android:textColorHint="@color/colordarkblue"
                android:textSize="@dimen/text_size_title" />


            <Switch
                android:layout_gravity="right"
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_username"
                android:textColor="@color/colordarkblue"
                android:textSize="12dp" />

            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
